--- a/packages/scss/src/components/indexTable/mods.scss
+++ b/packages/scss/src/components/indexTable/mods.scss
@@ -102,7 +102,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--components-indexTable-row-spacing);
-    padding-top: var(--components-indexTable-cell-padding);
+    padding: var(--components-indexTable-cell-padding);
 
     .indexTable-head {
         display: none;
@@ -130,9 +130,6 @@
         &:not(:has(.indexTable-body-row-cell)) {
             padding: 0;
             margin-bottom: 0;
-        }
-        &:first-child {
-            margin-top: var(--spacings-XS);
         }
         &:last-child {
             margin-bottom: 0;
